<resources>
    <string name="app_name">watch_tracker</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="angle_x">angle_x</string>
    <string name="angle_y">angle_y</string>
    <string name="angle_z">angle_z</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
</resources>