<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".MainActivity"
    tools:deviceIds="wear">


    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/inner_frame_layout_padding"
        app:layout_boxedEdges="all">

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="133dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="73dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/angle_x"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:text="@string/angle_x" />

                <TextView
                    android:id="@+id/angle_y"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="@string/angle_y" />

                <TextView
                    android:id="@+id/angle_z"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/angle_z" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/start"
                    android:layout_width="match_parent"
                    android:layout_height="68dp"
                    android:text="@string/start" />

                <Button
                    android:id="@+id/stop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/stop" />

            </LinearLayout>
        </LinearLayout>

    </FrameLayout>
</androidx.wear.widget.BoxInsetLayout>